--- a/manifest.json
+++ b/manifest.json
@@ -13,3 +13,35 @@
     "games"
   ]
 }
+  "icons": [
+    {
+      "src": "logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+  ]
