--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,27 @@
 {
-  "background_color": "#ffffff",
-  "dir": "auto",
-  "display": "fullscreen",
-  "name": "AdamakRunnerX",
-  "orientation": "any",
-  "scope": "https://armannagshbndi.github.io/AdamakRunnerX/",
-  "short_name": "AdamakRunnerX",
-  "start_url": "https://armannagshbndi.github.io/AdamakRunnerX/",
-  "theme_color": "#ffffff",
+  "name": "Adamak Runner X",
+  "short_name": "RunnerX",
+  "description": "A fast endless runner game",
   "lang": "en",
-  "categories": [
-    "games"
-  ]
-}
+  "dir": "auto",
+  "start_url": "https://armannagshbndi.github.io/AdamakRunnerX/",
+  "scope": ".",
+  "display": "fullscreen",
+  "orientation": "any",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "categories": ["games"],
   "icons": [
     {
-      "src": "logo.png",
+      "src": "logo2.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo.png",
+      "src": "logo3.png",
       "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "144x144",
       "type": "image/png"
     }
   ]
+}
+    
